--- a/package.json
+++ b/package.json
@@ -20,19 +20,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/common": "^10.2.5",
+    "@nestjs/core": "^10.2.5",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^10.2.5",
     "@prisma/client": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^10.1.17",
+    "@nestjs/platform-socket.io": "^10.2.5",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.2.5",
+    "@nestjs/websockets": "^10.2.5",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
@@ -47,6 +49,7 @@
     "jest": "29.5.0",
     "prettier": "^2.3.2",
     "prisma": "^5.3.1",
+    "socket.io": "^4.7.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
