--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "prisma migrate dev && nest start",
     "start:dev": "nest start --watch",
     "start:debug": "prisma migrate dev && nest start --debug --watch",
-    "start:prod": "prisma migrate dev && node dist/main",
+    "start:prod": "prisma migrate deploy && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
