--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "build": "prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "prisma migrate dev && nest start",
+    "start": "prisma migrate reset --force && nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "prisma migrate dev && nest start --debug --watch",
-    "start:prod": "prisma migrate dev && node dist/main",
+    "start:debug": "prisma migrate reset --force && nest start --debug --watch",
+    "start:prod": "prisma migrate reset --force && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
